--- a/src/style/layout/_forms.scss
+++ b/src/style/layout/_forms.scss
@@ -94,7 +94,7 @@
         align-items: center;
         border: 1px solid $lightTxtColor;
         padding: 12px 18px;
-        border-radius: 3px;
+        border-radius: $borderRadius;
         color: $darkTxtColor;
       }
       span {
